--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,9 +3,19 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
+<div class="field">
+    <%= f.label :email, 'Email' %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :name, 'Name' %><br />
+    <%= f.text_field :name, autocomplete: "Name" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :profile_picture, 'Profile Picture(url)' %><br />
+    <%= f.text_field :profile_picture, autocomplete: "Profile picture" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
