--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,8 +4,18 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email, 'Email' %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :name, 'Name' %><br />
+    <%= f.text_field :name, autocomplete: "Name" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :profile_picture, 'Profile Picture(url)' %><br />
+    <%= f.text_field :profile_picture, autocomplete: "Profile picture" %>
   </div>
 
   <div class="field">
