before the like model

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
             <% if user_signed_in? %> 
                 <p style="color:white"> Hi <%=current_user.name %> </p>
             <% else %>
-                <p style="color:white"> HOLA </p>   
+                <p style="color:white"> Hi unknow </p>   
             <% end %>
       </li>
         <% if user_signed_in? %>          
