--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
         <% @tweets.each do |tweet| %> 
             <div class="row">
                 <div class="col-md-12">
-                    <h3><%= tweet.contents%></h3>
+                    <span><%= tweet.contents%></span>
                 </div>  
                 
                 <div class="col-md-12 small">
