--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,6 +9,14 @@
   user-select: none;
 }
 
+html {
+  background: lightblue;
+}
+
+body {
+  color: red;
+}
+
 @media (min-width: 768px) {
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
