--- a/app/views/home/index.html copy.erb
+++ b/app/views/home/index.html copy.erb
@@ -11,18 +11,47 @@
 
 <div class="row">
     <div class="col-md-8 offset-md-2">
+        <div class="col-md-8 mx-auto">
+            <table class="table table-borderless">
+                <tbody>
+                    <tr>
+                        <%= render 'tweets/form', tweet: @tweet %>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         <% @tweets.each do |tweet| %> 
             <div class="row">
                 <div class="col-md-12">
-                    <span><%= tweet.contents%></span>
+                    <table class="table table-borderless">
+                        <tbody>
+                            <tr>
+                                <td><div class="avatar center1"> <%= image_tag tweet.user.profile_picture, :size => "100x100" %></div> </td>
+                                <td><strong><%= tweet.user.name %></strong><br><%= tweet.contents%></td>
+                            </tr>
+                            <tr>
+                                <td>Boton Like | <p><%= tweet.likes.count %> <%= (tweet.likes.count) == 1 ? 'Like' : 'Likes'%></p></td>
+                                <td>retweets</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td><span><strong>on </strong> <span class="font-weight-light"><%= tweet.created_at %></span></span></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>  
-                <p><%= tweet.likes.count %> <%= (tweet.likes.count) == 1 ? 'Like' : 'Likes'%></p>
+                <!--
                 <div class="col-md-12 small">
-                    <span><strong>Created by:</strong> <span class="font-weight-light"> <%= tweet.user_id %></span></span>
-                    <span><strong>on </strong> <span class="font-weight-light"><%= tweet.created_at %></span></span>
+                    
+                    
                 </div>
+                -->
             </div>
         <% end %>
         <%= paginate @tweets %>
     </div>
 </div>
+
+
+
+
