Many changes,icons and functionality of likes and unlikes are added, additionally the conversion of date and time to words with distance_of_time_in_words is implemented.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,17 @@
             <table class="table table-borderless">
                 <tbody>
                     <tr>
-                        <%= render 'tweets/form', tweet: @tweet %>
+                        <%if user_signed_in? %>
+                            <div class="col-md-12">
+                                <div class="tweet-wrap">
+                                    <div class="tweet-header">
+                                        <%= image_tag current_user.profile_picture, :class => "avator_profile" %>
+                                        <%= render 'tweets/form', tweet: @tweet %>
+                                    </div>
+                                        
+                                </div>
+                            </div>   
+                        <% end %>
                     </tr>
                 </tbody>
             </table>
@@ -24,21 +34,24 @@
                         <div class="tweet-header">
                             <%= image_tag tweet.user.profile_picture, :class => "avator" %>
                             <div class="tweet-header-info">
-                                <strong><%= tweet.user.name %></strong><span><%= tweet.created_at %></span>
+                                <strong><%= tweet.user.name %></strong><span><%= distance_of_time_in_words(Time.now, tweet.created_at) %></span>
                                 <p><%= tweet.contents%></p>
                             </div>
                         </div>
                         <div class="tweet-info-counts">
                             <div class="likes">
                                 <!--<svg class="feather feather-heart sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>-->
-                                <% pre_like = tweet.likes.find { |like| like.user_id == current_user.id} %>
-                                <% if pre_like %>
-                                    <%= button_to 'Unlike', tweet_like_path(tweet, pre_like), method: :delete %>
-                                <% else %>
-                                    <%= button_to 'Like', tweet_likes_path(tweet), method: :post %>
-                                <% end %>
+                                <div>
+                                <%if user_signed_in? %>
+                                    <% pre_like = tweet.likes.find { |like| like.user_id == current_user.id} %>
+                                    <% if pre_like %>
+                                        <%= link_to(tweet_like_path(tweet, pre_like), method: :delete)do%><i class="far fa-heart" style="color:black;"></i><% end %>
 
-                                
+                                    <% else %>
+                                        <%= link_to(tweet_likes_path(tweet), method: :post)do%><i class="fas fa-heart" style="color:red;"></i><% end %>
+                                    <% end %>
+                                <% end %>
+                                </div>
                                 <div class="likes-count">
                                     <%= tweet.likes.count %> <%= (tweet.likes.count) == 1 ? 'Like' : 'Likes'%>
                                 </div>
