--- a/app/assets/stylesheets/tweets.scss
+++ b/app/assets/stylesheets/tweets.scss
@@ -15,6 +15,12 @@ img {
   margin-right: 15px;
 }
 
+.avator_profile {
+  border-radius: 100px;
+  width: 80px;
+  margin-right: 15px;
+}
+
 .tweet-wrap {
   max-width: 490px;
   background: #fff;
