--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,29 +1,31 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+    <div class="container">
+        <a class="navbar-brand" href="<%= root_path%>"><%=t('Twitter')%></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %> 
+                  <p id="p_name"> Hi  <%=current_user.name %> </p>
+              <% else %>
+                  <p id="p_name"> Hi  Unknow </p>   
+              <% end %>
+              <% if user_signed_in? %>
+                  <li class="nav-item">
+                  <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class:'nav-link text-white'%>
+                  </li>
+              <%else%>
+                  <li class="nav-item active">
+                  <%= link_to 'Sign Up', new_user_registration_path, class:'nav-link text-white'%>
+                  </li>
+                  <li class="nav-item">
+                  <%= link_to 'Log In', new_user_session_path, class:'nav-link text-white'%>
+                  </li>
+              <%end%>
 
-
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Twitter</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        <li>
-            <% if user_signed_in? %> 
-                <p style="color:white"> Hi <%=current_user.name %> </p>
-            <% else %>
-                <p style="color:white"> Hi unknow </p>   
-            <% end %>
-      </li>
-        <% if user_signed_in? %>          
-            <li class="nav-item"><%=link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
-            <li role="separator" class="divider"></li>
-        <% else %>
-            <li class="nav-item"><%=link_to 'Register', new_user_registration_path %></li>
-            <li class="nav-item"><%=link_to 'Log In', new_user_session_path %></li>
-        <% end %>
-      </ul>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
