--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= form.text_area :contents, size: "30x5", placeholder: "What's happening? " %>
+    <%= form.text_area :contents, size: "30x5", placeholder: "What's happening? ", :required => true %>
   </div>
   <div class="actions">
     <%= form.submit("Tweet") %>
