--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,13 +35,14 @@
                         <div class="tweet-header">
                             <%= image_tag tweet.user.profile_picture, :class => "avator" %>
                             <div class="tweet-header-info">
-                                <strong><%= tweet.user.name %></strong><span><%= distance_of_time_in_words(Time.now, tweet.created_at)+ ' ago' %></span>
+                                <strong><%= tweet.user.name %></strong><span> <%= link_to "Created #{time_ago_in_words(tweet.created_at)} ago", tweet %> 
+                                <!--<%= distance_of_time_in_words(Time.now, tweet.created_at)+ ' ago' %></span>-->
                                 <p><%= tweet.contents%></p>
                             </div>
                         </div>
                         <div class="tweet-info-counts">
                             <div class="likes">
-                                <!--<svg class="feather feather-heart sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>-->
+                                
                                 <div>
                                 <%if user_signed_in? %>
                                     <% pre_like = tweet.likes.find { |like| like.user_id == current_user.id} %>
@@ -59,7 +60,6 @@
                             </div>
                             <div class="retweets">
                                 <%= link_to(tweet_retweet_path(tweet), method: :post)do%><i class="fas fa-retweet" style="color:red;"></i><% end %>
-                               <!-- <svg class="feather feather-repeat sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polyline points="17 1 21 5 17 9"></polyline><path d="M3 11V9a4 4 0 0 1 4-4h14"></path><polyline points="7 23 3 19 7 15"></polyline><path d="M21 13v2a4 4 0 0 1-4 4H3"></path></svg>-->
                                 <div class="retweet-count">
                                     cant retweets
                                 </div>
