--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,31 +1,31 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Tweets</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Contents</th>
-      <th>User</th>
-      <th>Tweet</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tweets.each do |tweet| %>
+<div class="container">
+  <table>
+    <thead>
       <tr>
-        <td><%= tweet.contents %></td>
-        <td><%= tweet.user_id %></td>
-        <td><%= tweet.tweet_id %></td>
-        <td><%= link_to 'Show', tweet %></td>
-        <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
-        <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Contents</th>
+        <th>User</th>
+        <th>Tweet</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
+    <tbody>
+      <% @tweets.each do |tweet| %>
+        <tr>
+          <td><%= tweet.contents %></td>
+          <td><%= tweet.user_id %></td>
+          <td><%= tweet.tweet_id %></td>
+          <td><%= link_to 'Show', tweet %></td>
+          <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
+          <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 <br>
 
 <%= link_to 'New Tweet', new_tweet_path %>
