--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,34 +1,23 @@
 <p id="notice"><%= notice %></p>
+<div class="container">
+  <p>
+    <strong>Tweet:</strong>
+    <%= @tweet.contents %>
+  </p>
 
-<p>
-  <strong>Contents:</strong>
-  <%= @tweet.contents %>
-</p>
+  <p>This tweet has  <%= @tweet.likes.count %> <%= (@tweet.likes.count) == 1 ? 'Like' : 'Likes'%></p>
 
-<p>
-  <strong>User:</strong>
-  <%= @tweet.user_id %>
-</p>
+  <% Like.where(tweet_id: @tweet.id).each do |profile_p| %>
+    <% profile_picture =  profile_p.user_id %>
+      <div class="tweet-header">
+        <%= image_tag User.find(profile_picture).profile_picture, :class => "avator" %>
+          <div class="tweet-header-info">
+            <strong><%= User.find(profile_picture).name %></strong>
+          </div>
+      </div>
+      <br>
+      <br>                     
+  <% end %>
+<%= link_to 'Back', root_path %>
+</div>
 
-<p>
-  <strong>Tweet:</strong>
-  <%= @tweet.tweet_id %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @tweet.user_id %>
-</p>
-<p><%= @tweet.likes.count %> <%= (@tweet.likes.count) == 1 ? 'Like' : 'Likes'%></p>
-
-<% pre_like = @tweet.likes.find { |like| like.user_id == current_user.id} %>
-<% if pre_like %>
-
-  <%= button_to 'Unlike', tweet_like_path(@tweet, pre_like), method: :delete %>
-<% else %>
-
-  <%= button_to 'Like', tweet_likes_path(@tweet), method: :post %>
-<% end %>
-
-<%= link_to 'Edit', edit_tweet_path(@tweet) %> |
-<%= link_to 'Back', tweets_path %>
