follow and unfollow implemented

--- a/app/views/home/_who-to-follow.html.erb
+++ b/app/views/home/_who-to-follow.html.erb
@@ -1,57 +1,23 @@
-<div class="column">
-	<nav class="panel">
-		<p class="panel-heading">Who to Follow</p>
-	
-	<div class="panel-block">
-		<article class="media">
-			<div class="media-left">
-				<figure class="image is-32x32">
-					<img src="https://bulma.io/images/placeholders/64x64.png">
-				</figure>
+
+<div class="container">
+
+	<h3>Who to Follow</h3>
+	<br>
+	<% @users.each do |user| %>
+
+		<div class="tweet-header border border-primary rounded"">
+        	<%= image_tag user.profile_picture, :class => "avator" %>
+            <div class="tweet-header-info">
+                <strong><%= user.name %></strong>
+				<% if current_user.find_friendship(user) == false %>
+					<p><%= link_to 'Follow', user_friends_path(user.id), method: :post, :class => 'btn btn-outline-primary' %></p>
+				<% else %>
+					
+					<p><%= link_to 'Unfollow', user_friend_path(current_user.id, user.id), method: :delete, :class => 'btn btn-outline-danger' %></p>
+				<% end %>
 			</div>
-			<div class="media-content">
-				<div class="content">
-					<p>
-						<strong>John Smith</strong>
-						<small>@johnsmith</small>
-					</p>
-				</div>
-			</div>
-		</article>
-	</div>
-		<div class="panel-block">
-		<article class="media">
-			<div class="media-left">
-				<figure class="image is-32x32">
-					<img src="https://bulma.io/images/placeholders/64x64.png">
-				</figure>
-			</div>
-			<div class="media-content">
-				<div class="content">
-					<p>
-						<strong>John Smith</strong>
-						<small>@johnsmith</small>
-					</p>
-				</div>
-			</div>
-		</article>
-	</div>
-		<div class="panel-block">
-		<article class="media">
-			<div class="media-left">
-				<figure class="image is-32x32">
-					<img src="https://bulma.io/images/placeholders/64x64.png">
-				</figure>
-			</div>
-			<div class="media-content">
-				<div class="content">
-					<p>
-						<strong>John Smith</strong>
-						<small>@johnsmith</small>
-					</p>
-				</div>
-			</div>
-		</article>
-	</div>
-	</nav>
+		</div>
+		<br>
+    <% end %>
+	<%= paginate @users, param_name: :user_page %>
 </div>
