--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,6 @@
 <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+
     <div class="container">
         <a class="navbar-brand" href="<%= root_path%>"><%=t('Twitter')%></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,6 +27,16 @@
               <%end%>
 
             </ul>
+                
+                
+                <%= form_tag('/search', options = { class: "d-flex" }) do%>
+                    <%= text_field_tag("term", value = nil, options = {class: "form-control me-2", placeholder: "Search"})  %>
+                    <%= submit_tag(value = 'Search', options = { class: "btn btn-outline-primary" }) do%>
+                        <i class="fas fa-search fa-sm"></i>
+                    <% end %> 
+                <% end %> 
+                
+             
         </div>
     </div>
 </nav>
